# can-analyzer

./: index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  api.ts  store.ts  styles.css  types.ts  utils.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: codec.rs  commands.rs  comparator.rs  dbc.rs  lib.rs  main.rs  recording.rs  simulator.rs  storage.rs  types.rs
src/components/: AppHeader.tsx  ChartPanel.tsx  ComparatorPanel.tsx  CompareReport.tsx  DbcPanel.tsx  FilterPanel.tsx  MonitorTable.tsx  PlaybackPanel.tsx  SendPanel.tsx  SignalPanel.tsx  SimulatorPanel.tsx  StatsPanel.tsx
